Make homepage guest accessible - drop welcome and dashboard
Add Product Controller - view - routes - nav links

--- a/lang/es.json
+++ b/lang/es.json
@@ -23,7 +23,6 @@
     "Continue": "Continuar",
     "Created": "Creado",
     "Current Password": "Contraseña actual",
-    "Dashboard": "Panel",
     "Delete Account": "Borrar cuenta",
     "Email": "Correo electrónico",
     "Email Password Reset Link": "Enviar enlace para restablecer contraseña",
@@ -38,6 +37,7 @@
     "Go to page :page": "Ir a la página :page",
     "Gone": "Recurso no disponible",
     "Hello!": "¡Hola!",
+    "Home": "Inicio",
     "HTTP Version Not Supported": "Versión HTTP no compatible",
     "I'm a teapot": "Soy una tetera",
     "If you did not create an account, no further action is required.": "Si no ha creado una cuenta, no se requiere ninguna acción adicional.",
