Add Product Controller - view - routes - nav links

--- a/lang/es.json
+++ b/lang/es.json
@@ -67,6 +67,7 @@
     "Network Read Timeout Error": "Error de tiempo de espera de lectura de red",
     "New Password": "Nueva Contraseña",
     "No Content": "Sin contenido",
+    "No products found": "No se encontraron productos",
     "Non-Authoritative Information": "Información no autorizada",
     "Not Acceptable": "Inaceptable",
     "Not Extended": "no extendido",
@@ -88,7 +89,9 @@
     "Please click the button below to verify your email address.": "Por favor, haga clic en el botón de abajo para verificar su dirección de correo electrónico.",
     "Precondition Failed": "Error de condición previa",
     "Precondition Required": "Precondición requerida",
+    "Price": "Precio",
     "Processing": "Procesando",
+    "Products": "Productos",
     "Profile": "Perfil",
     "Profile Information": "Información de perfil",
     "Proxy Authentication Required": "Se requiere autenticación proxy",
