--- a/lang/es.json
+++ b/lang/es.json
@@ -5,6 +5,7 @@
     "A new verification link has been sent to your email address.": "Se ha enviado un nuevo enlace de verificación a su dirección de correo electrónico.",
     "A Timeout Occurred": "Se produjo un tiempo de espera",
     "Accepted": "Aceptado",
+    "Add new product": "Agregar nuevo producto",
     "All rights reserved.": "Todos los derechos reservados.",
     "Already registered?": "¿Ya se registró?",
     "Already Reported": "Ya Reportado",
@@ -122,6 +123,7 @@
     "The given data was invalid.": "Los datos proporcionados no son válidos.",
     "The response is not a streamed response.": "La respuesta no es una respuesta transmitida.",
     "The response is not a view.": "La respuesta no es una vista.",
+    "This action is unauthorized.": "Esta acción no está autorizada.",
     "This is a secure area of the application. Please confirm your password before continuing.": "Esta es un área segura de la aplicación. Confirme su contraseña antes de continuar.",
     "This password reset link will expire in :count minutes.": "Este enlace de restablecimiento de contraseña expirará en :count minutos.",
     "to": "al",
