Form to create product

--- a/lang/es.json
+++ b/lang/es.json
@@ -22,6 +22,7 @@
     "Connection Closed Without Response": "Conexión cerrada sin respuesta",
     "Connection Timed Out": "Tiempo de conexión agotado",
     "Continue": "Continuar",
+    "Create product": "Crear producto",
     "Created": "Creado",
     "Current Password": "Contraseña actual",
     "Delete Account": "Borrar cuenta",
