Edit Product: Add Form?

--- a/lang/es.json
+++ b/lang/es.json
@@ -26,6 +26,8 @@
     "Created": "Creado",
     "Current Password": "Contraseña actual",
     "Delete Account": "Borrar cuenta",
+    "Edit": "Editar",
+    "Edit product": "Editar producto",
     "Email": "Correo electrónico",
     "Email Password Reset Link": "Enviar enlace para restablecer contraseña",
     "Ensure your account is using a long, random password to stay secure.": "Asegúrese que su cuenta esté usando una contraseña larga y aleatoria para mantenerse seguro.",
