Delete product: Code implementation

--- a/lang/es.json
+++ b/lang/es.json
@@ -9,6 +9,7 @@
     "All rights reserved.": "Todos los derechos reservados.",
     "Already registered?": "¿Ya se registró?",
     "Already Reported": "Ya Reportado",
+    "Are you sure?": "¿Está seguro?",
     "Are you sure you want to delete your account?": "¿Está seguro que desea eliminar su cuenta?",
     "Bad Gateway": "Mala puerta de enlace",
     "Bad Request": "Solicitud incorrecta",
@@ -25,6 +26,7 @@
     "Create product": "Crear producto",
     "Created": "Creado",
     "Current Password": "Contraseña actual",
+    "Delete": "Eliminar",
     "Delete Account": "Borrar cuenta",
     "Edit": "Editar",
     "Edit product": "Editar producto",
